--- a/.env.example
+++ b/.env.example
@@ -1,51 +1,8 @@
-# Web Analyzer MCP Server Configuration
+# Web Analyzer MCP Configuration
 
-# Server Configuration
-HOST=0.0.0.0
-PORT=8000
-DEBUG=false
-SECRET_KEY=your-secret-key-change-in-production
-API_KEY=your-api-key-here
+# OpenAI API Configuration (Required for Q&A functionality)
+OPENAI_API_KEY=your_openai_api_key_here
 
-# Redis Configuration
-REDIS_URL=redis://localhost:6379/0
-REDIS_PASSWORD=
-REDIS_MAX_CONNECTIONS=20
-
-# Celery Configuration
-CELERY_BROKER_URL=redis://localhost:6379/1
-CELERY_RESULT_BACKEND=redis://localhost:6379/2
-
-# Caching
-CACHE_TTL=3600
-CACHE_MAX_SIZE=1000
-
-# Rate Limiting
-RATE_LIMIT_PER_MINUTE=60
-RATE_LIMIT_BURST=10
-
-# Web Scraping
-REQUEST_TIMEOUT=30
-MAX_PAGES_PER_REQUEST=100
-MAX_DEPTH=3
-
-# External APIs
-OPENAI_API_KEY=your-openai-api-key
-ANTHROPIC_API_KEY=your-anthropic-api-key
-
-# Logging
-LOG_LEVEL=INFO
-LOG_FORMAT=json
-
-# Monitoring
-ENABLE_METRICS=true
-METRICS_PORT=9090
-
-# CORS
-ALLOWED_ORIGINS=["*"]
-
-# Security
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-
-# Webhooks
-SLACK_WEBHOOK_URL=your-slack-webhook-url
+# Optional: Set different model (default: gpt-3.5-turbo)
+# Available models: gpt-3.5-turbo, gpt-4, gpt-4-turbo, gpt-4o, gpt-5
+OPENAI_MODEL=gpt-3.5-turbo
